--- a/src/main/resources/com/example/egyptian_league_management_system/teamsManagement.fxml
+++ b/src/main/resources/com/example/egyptian_league_management_system/teamsManagement.fxml
@@ -6,31 +6,42 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-image: url('epl.jpg'); -fx-background-size: stretch; -fx-background-position: center center; -fx-background-repeat: no-repeat;" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.egyptian_league_management_system.Controllers.TeamsManagementController">
 
-        <Button layoutX="7.0" layoutY="364.0" mnemonicParsing="false" onAction="#onBackClick" prefHeight="26.0" prefWidth="66.0" styleClass="button-7" text="Back" wrapText="true" />
-    <Button id="Display team matches" alignment="CENTER" layoutX="21.0" layoutY="260.0" mnemonicParsing="false" onAction="#onDisplayTeamIMatchesClick" prefHeight="38.0" prefWidth="268.0" styleClass="button-73" text="Display team matches" textAlignment="CENTER" wrapText="true" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1">
-        <font>
-            <Font size="17.0" />
-        </font>
-    </Button>
-    <Button id="Update team information" alignment="CENTER" layoutX="21.0" layoutY="197.0" mnemonicParsing="false" onAction="#onUpdateTeamInformationClick" prefHeight="38.0" prefWidth="268.0" styleClass="button-73" text="Update team information" textAlignment="CENTER" wrapText="true" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1">
-        <font>
-            <Font size="17.0" />
-        </font>
-    </Button>
-    <Button id="Display team information" alignment="CENTER" layoutX="308.0" layoutY="197.0" mnemonicParsing="false" onAction="#onDisplayTeamInformationClick" prefHeight="38.0" prefWidth="268.0" styleClass="button-73" text="Display team information" textAlignment="CENTER" wrapText="true" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1">
-        <font>
-            <Font size="17.0" />
-        </font>
-    </Button>
-    <Button id="Enter team information" alignment="CENTER" layoutX="166.0" layoutY="131.0" mnemonicParsing="false" onAction="#onEnterTeamInformationClick" prefHeight="38.0" prefWidth="268.0" styleClass="button-73" text="Enter team information" textAlignment="CENTER" wrapText="true" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1">
-        <font>
-            <Font size="17.0" />
-        </font>
-    </Button>
-   <Button id="Display team detailed scores" alignment="CENTER" layoutX="308.0" layoutY="260.0" mnemonicParsing="false" onAction="#onDisplayTeamDetailedScoresClick" prefHeight="38.0" prefWidth="268.0" styleClass="button-73" text="Display team detailed scores" textAlignment="CENTER" wrapText="true">
-      <font>
-         <Font size="17.0" />
-      </font>
-   </Button>
+    <Button layoutX="7.0" layoutY="364.0" mnemonicParsing="false" onAction="#onBackClick" prefHeight="26.0" prefWidth="66.0" styleClass="button-7" text="Back" wrapText="true" />
 
-    </AnchorPane>
+    <Button alignment="CENTER" layoutX="23.0" layoutY="205.0" mnemonicParsing="false" onAction="#onDisplayTeamMatchesClick" prefHeight="38.0" prefWidth="268.0" styleClass="button-73" text="Display team matches" textAlignment="CENTER" wrapText="true">
+        <font>
+            <Font size="17.0" />
+        </font>
+    </Button>
+
+    <Button alignment="CENTER" layoutX="23.0" layoutY="142.0" mnemonicParsing="false" onAction="#onUpdateTeamInformationClick" prefHeight="38.0" prefWidth="268.0" styleClass="button-73" text="Update team information" textAlignment="CENTER" wrapText="true">
+        <font>
+            <Font size="17.0" />
+        </font>
+    </Button>
+
+    <Button alignment="CENTER" layoutX="310.0" layoutY="142.0" mnemonicParsing="false" onAction="#onDisplayTeamInformationClick" prefHeight="38.0" prefWidth="268.0" styleClass="button-73" text="Display team information" textAlignment="CENTER" wrapText="true">
+        <font>
+            <Font size="17.0" />
+        </font>
+    </Button>
+
+    <Button alignment="CENTER" layoutX="168.0" layoutY="76.0" mnemonicParsing="false" onAction="#onEnterTeamInformationClick" prefHeight="38.0" prefWidth="268.0" styleClass="button-73" text="Enter team information" textAlignment="CENTER" wrapText="true">
+        <font>
+            <Font size="17.0" />
+        </font>
+    </Button>
+
+    <Button alignment="CENTER" layoutX="310.0" layoutY="205.0" mnemonicParsing="false" onAction="#onDisplayTeamDetailedScoresClick" prefHeight="38.0" prefWidth="268.0" styleClass="button-73" text="Display team detailed scores" textAlignment="CENTER" wrapText="true">
+        <font>
+            <Font size="17.0" />
+        </font>
+    </Button>
+
+    <Label fx:id="infoLabel" layoutX="50.0" layoutY="269.0" prefHeight="81.0" prefWidth="500.0" text="" textAlignment="CENTER">
+        <font>
+            <Font size="17.0" />
+        </font>
+    </Label>
+
+</AnchorPane>
