--- a/src/main/resources/com/example/egyptian_league_management_system/teamsManagement.fxml
+++ b/src/main/resources/com/example/egyptian_league_management_system/teamsManagement.fxml
@@ -5,35 +5,35 @@
 <?import javafx.scene.text.*?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-image: url('epl.jpg'); -fx-background-size: stretch; -fx-background-position: center center; -fx-background-repeat: no-repeat;" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.egyptian_league_management_system.Controllers.TeamsManagementController">
-    <TextField fx:id="teamNameField" layoutX="216.0" layoutY="252.0" promptText="Enter Team Name" />
+    <TextField visible="false" fx:id="teamNameField" layoutX="139.0" layoutY="247.0" prefHeight="38.0" prefWidth="193.0" promptText="Enter Team Name" />
 
     <Button layoutX="7.0" layoutY="364.0" mnemonicParsing="false" onAction="#onBackClick" prefHeight="26.0" prefWidth="66.0" styleClass="button-7" text="Back" wrapText="true" />
 
-    <Button alignment="CENTER" layoutX="23.0" layoutY="205.0" mnemonicParsing="false" onAction="#onDisplayTeamMatchesClick" prefHeight="38.0" prefWidth="268.0" styleClass="button-73" text="Display team matches" textAlignment="CENTER" wrapText="true">
+    <Button alignment="CENTER" layoutX="23.0" layoutY="188.0" mnemonicParsing="false" onAction="#onDisplayTeamMatchesClick" prefHeight="38.0" prefWidth="268.0" styleClass="button-73" text="Display team matches" textAlignment="CENTER" wrapText="true">
         <font>
             <Font size="17.0" />
         </font>
     </Button>
 
-    <Button alignment="CENTER" layoutX="23.0" layoutY="142.0" mnemonicParsing="false" onAction="#onUpdateTeamInformationClick" prefHeight="38.0" prefWidth="268.0" styleClass="button-73" text="Update team information" textAlignment="CENTER" wrapText="true">
+    <Button alignment="CENTER" layoutX="23.0" layoutY="133.0" mnemonicParsing="false" onAction="#onUpdateTeamInformationClick" prefHeight="38.0" prefWidth="268.0" styleClass="button-73" text="Update team information" textAlignment="CENTER" wrapText="true">
         <font>
             <Font size="17.0" />
         </font>
     </Button>
 
-    <Button alignment="CENTER" layoutX="310.0" layoutY="142.0" mnemonicParsing="false" onAction="#onDisplayTeamInformationClick" prefHeight="38.0" prefWidth="268.0" styleClass="button-73" text="Display team information" textAlignment="CENTER" wrapText="true">
+    <Button alignment="CENTER" layoutX="310.0" layoutY="133.0" mnemonicParsing="false" onAction="#onDisplayTeamInformationClick" prefHeight="38.0" prefWidth="268.0" styleClass="button-73" text="Display team information" textAlignment="CENTER" wrapText="true">
         <font>
             <Font size="17.0" />
         </font>
     </Button>
 
-    <Button alignment="CENTER" layoutX="23.0" layoutY="90.0" mnemonicParsing="false" onAction="#onEnterTeamInformationClick" prefHeight="38.0" prefWidth="268.0" styleClass="button-73" text="Enter team information" textAlignment="CENTER" wrapText="true">
+    <Button alignment="CENTER" layoutX="23.0" layoutY="81.0" mnemonicParsing="false" onAction="#onEnterTeamInformationClick" prefHeight="38.0" prefWidth="268.0" styleClass="button-73" text="Enter team information" textAlignment="CENTER" wrapText="true">
         <font>
             <Font size="17.0" />
         </font>
     </Button>
 
-    <Button alignment="CENTER" layoutX="310.0" layoutY="205.0" mnemonicParsing="false" onAction="#onDisplayTeamDetailedScoresClick" prefHeight="38.0" prefWidth="268.0" styleClass="button-73" text="Display team detailed scores" textAlignment="CENTER" wrapText="true">
+    <Button alignment="CENTER" layoutX="310.0" layoutY="188.0" mnemonicParsing="false" onAction="#onDisplayTeamDetailedScoresClick" prefHeight="38.0" prefWidth="268.0" styleClass="button-73" text="Display team detailed scores" textAlignment="CENTER" wrapText="true">
         <font>
             <Font size="17.0" />
         </font>
@@ -44,7 +44,12 @@
             <Font size="17.0" />
         </font>
     </Label>
-   <Button alignment="CENTER" layoutX="310.0" layoutY="90.0" mnemonicParsing="false" onAction="#onSearchForTeamIClick" prefHeight="38.0" prefWidth="268.0" styleClass="button-73" text="Search for team " textAlignment="CENTER" wrapText="true">
+   <Button alignment="CENTER" layoutX="310.0" layoutY="81.0" mnemonicParsing="false" onAction="#onSearchForTeamIClick" prefHeight="38.0" prefWidth="268.0" styleClass="button-73" text="Search for team " textAlignment="CENTER" wrapText="true">
+      <font>
+         <Font size="17.0" />
+      </font>
+   </Button>
+   <Button visible="false" alignment="CENTER" layoutX="368.0" layoutY="247.0" mnemonicParsing="false" onAction="#onEnterClick" prefHeight="17.0" prefWidth="76.0" styleClass="button-73" text="Enter" textAlignment="CENTER" wrapText="true">
       <font>
          <Font size="17.0" />
       </font>
