--- a/src/main/resources/com/example/egyptian_league_management_system/teamsManagement.fxml
+++ b/src/main/resources/com/example/egyptian_league_management_system/teamsManagement.fxml
@@ -2,59 +2,108 @@
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.paint.*?>
 <?import javafx.scene.text.*?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-image: url('epl.jpg'); -fx-background-size: stretch; -fx-background-position: center center; -fx-background-repeat: no-repeat;" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.egyptian_league_management_system.Controllers.TeamsManagementController">
-    <TextField fx:id="teamNameField" layoutX="139.0" layoutY="247.0" prefHeight="38.0" prefWidth="193.0" promptText="Enter Team Name" visible="false" />
+    <TextField fx:id="teamNameField" layoutX="137.0" layoutY="196.0" prefHeight="38.0" prefWidth="193.0" promptText="Enter Team Name" visible="false" />
 
     <Button layoutX="7.0" layoutY="364.0" mnemonicParsing="false" onAction="#onBackClick" prefHeight="26.0" prefWidth="66.0" styleClass="button-7" text="Back" wrapText="true" />
 
-    <Button alignment="CENTER" layoutX="23.0" layoutY="188.0" mnemonicParsing="false" onAction="#onDisplayTeamMatchesClick" prefHeight="38.0" prefWidth="268.0" styleClass="button-73" text="Display team matches" textAlignment="CENTER" wrapText="true">
+    <Button alignment="CENTER" layoutX="308.0" layoutY="85.0" mnemonicParsing="false" onAction="#onDisplayTeamMatchesClick" prefHeight="38.0" prefWidth="268.0" styleClass="button-73" text="Display team matches" textAlignment="CENTER" wrapText="true">
         <font>
             <Font size="17.0" />
         </font>
     </Button>
 
-    <Button alignment="CENTER" layoutX="23.0" layoutY="133.0" mnemonicParsing="false" onAction="#onUpdateTeamInformationClick" prefHeight="38.0" prefWidth="268.0" styleClass="button-73" text="Update team information" textAlignment="CENTER" wrapText="true">
+    <Button alignment="CENTER" layoutX="21.0" layoutY="143.0" mnemonicParsing="false" onAction="#onUpdateTeamInformationClick" prefHeight="38.0" prefWidth="268.0" styleClass="button-73" text="Update team information" textAlignment="CENTER" wrapText="true">
         <font>
             <Font size="17.0" />
         </font>
     </Button>
 
-    <Button alignment="CENTER" layoutX="310.0" layoutY="133.0" mnemonicParsing="false" onAction="#onDisplayTeamInformationClick" prefHeight="38.0" prefWidth="268.0" styleClass="button-73" text="Display team information" textAlignment="CENTER" wrapText="true">
+    <Button alignment="CENTER" layoutX="311.0" layoutY="143.0" mnemonicParsing="false" onAction="#onDisplayTeamInformationClick" prefHeight="38.0" prefWidth="268.0" styleClass="button-73" text="Display team information" textAlignment="CENTER" wrapText="true">
         <font>
             <Font size="17.0" />
         </font>
     </Button>
 
-    <Button alignment="CENTER" layoutX="23.0" layoutY="81.0" mnemonicParsing="false" onAction="#onEnterTeamInformationClick" prefHeight="38.0" prefWidth="268.0" styleClass="button-73" text="Enter team information" textAlignment="CENTER" wrapText="true">
+    <Button alignment="CENTER" layoutX="21.0" layoutY="85.0" mnemonicParsing="false" onAction="#onAddNewTeamClick" prefHeight="38.0" prefWidth="268.0" styleClass="button-73" text="Add new team" textAlignment="CENTER" wrapText="true">
         <font>
             <Font size="17.0" />
         </font>
     </Button>
 
-    <Button alignment="CENTER" layoutX="310.0" layoutY="188.0" mnemonicParsing="false" onAction="#onDisplayTeamDetailedScoresClick" prefHeight="38.0" prefWidth="268.0" styleClass="button-73" text="Display team detailed scores" textAlignment="CENTER" wrapText="true">
+    <Button alignment="CENTER" layoutX="311.0" layoutY="196.0" mnemonicParsing="false" onAction="#onDisplayTeamDetailedScoresClick" prefHeight="38.0" prefWidth="268.0" styleClass="button-73" text="Display team detailed scores" textAlignment="CENTER" wrapText="true">
         <font>
             <Font size="17.0" />
         </font>
     </Button>
 
-    <Label fx:id="infoLabel" layoutX="50.0" layoutY="285.0" prefHeight="65.0" prefWidth="500.0" text="" textAlignment="CENTER">
+    <Label fx:id="infoLabel" layoutX="50.0" layoutY="294.0" prefHeight="63.0" prefWidth="500.0" text="" textAlignment="CENTER">
         <font>
             <Font size="17.0" />
         </font>
     </Label>
-   <Button alignment="CENTER" layoutX="310.0" layoutY="81.0" mnemonicParsing="false" onAction="#onSearchForTeamIClick" prefHeight="38.0" prefWidth="268.0" styleClass="button-73" text="Search for team " textAlignment="CENTER" wrapText="true">
+   <Button alignment="CENTER" layoutX="21.0" layoutY="196.0" mnemonicParsing="false" onAction="#onSearchForTeamIClick" prefHeight="38.0" prefWidth="268.0" styleClass="button-73" text="Search for team " textAlignment="CENTER" wrapText="true">
       <font>
          <Font size="17.0" />
       </font>
    </Button>
-   <Button alignment="CENTER" layoutX="368.0" layoutY="247.0" mnemonicParsing="false" onAction="#onEnterClick" prefHeight="17.0" prefWidth="76.0" styleClass="button-73" text="Enter" textAlignment="CENTER" visible="false" wrapText="true">
-      <font>
-         <Font size="17.0" />
-      </font>
-   </Button>
-   <TextField fx:id="nameField" layoutX="161.0" layoutY="254.0" />
-   <Button layoutX="333.0" layoutY="254.0" mnemonicParsing="false" onAction="#onOkSearch" prefHeight="25.0" prefWidth="66.0" text="ok" />
 
+   <TextField fx:id="nameField" alignment="CENTER" layoutX="352.0" layoutY="252.0" prefHeight="38.0" prefWidth="209.0" promptText="enter team name " styleClass="button-73" />
+
+    <Label alignment="CENTER" layoutX="142.0" layoutY="14.0" prefHeight="39.0" prefWidth="315.0" text="select desired function" wrapText="true" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1">
+        <font>
+            <Font name="System Bold Italic" size="27.0" />
+        </font>
+        <textFill>
+            <LinearGradient cycleMethod="REPEAT" endX="1.0" endY="1.0">
+                <stops>
+                    <Stop>
+                        <color>
+                            <Color red="1.0" green="0.31481480598449707" blue="0.31481480598449707" />
+                        </color>
+                    </Stop>
+                    <Stop offset="0.4178082191780822">
+                        <color>
+                            <Color red="1.0" green="1.0" blue="1.0" />
+                        </color>
+                    </Stop>
+                    <Stop offset="1.0">
+                        <color>
+                            <Color red="0.39181286096572876" green="0.9473684430122375" blue="0.7714424729347229" />
+                        </color>
+                    </Stop>
+                </stops>
+            </LinearGradient>
+        </textFill>
+    </Label>
+
+    <Label alignment="CENTER" layoutX="29.0" layoutY="251.0" prefHeight="39.0" prefWidth="315.0" text="note: enter team name to use display functions" wrapText="true" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1">
+        <font>
+            <Font name="System Bold Italic" size="14.0" />
+        </font>
+        <textFill>
+            <LinearGradient cycleMethod="REPEAT" endX="1.0" endY="1.0">
+                <stops>
+                    <Stop>
+                        <color>
+                            <Color red="1.0" green="0.31481480598449707" blue="0.31481480598449707" />
+                        </color>
+                    </Stop>
+                    <Stop offset="0.4178082191780822">
+                        <color>
+                            <Color red="1.0" green="1.0" blue="1.0" />
+                        </color>
+                    </Stop>
+                    <Stop offset="1.0">
+                        <color>
+                            <Color red="0.39181286096572876" green="0.9473684430122375" blue="0.7714424729347229" />
+                        </color>
+                    </Stop>
+                </stops>
+            </LinearGradient>
+        </textFill>
+    </Label>
 </AnchorPane>
