--- a/src/main/resources/com/example/egyptian_league_management_system/choose.fxml
+++ b/src/main/resources/com/example/egyptian_league_management_system/choose.fxml
@@ -57,5 +57,10 @@
          <Font size="17.0" />
       </font>
    </Button>
+   <Button id="MATCHES MANAGEMENT" alignment="CENTER" layoutX="152.0" layoutY="270.0" mnemonicParsing="false" onAction="#onAdditionalManagementClick" prefHeight="38.0" prefWidth="295.0" styleClass="button-73" text="ADDITIONAL MANAGEMENT" textAlignment="CENTER" wrapText="true">
+      <font>
+         <Font size="17.0" />
+      </font>
+   </Button>
 
 </AnchorPane>
