--- a/src/main/resources/com/example/egyptian_league_management_system/playerManagement.fxml
+++ b/src/main/resources/com/example/egyptian_league_management_system/playerManagement.fxml
@@ -2,10 +2,37 @@
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.paint.*?>
 <?import javafx.scene.text.*?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-image: url('epl.jpg'); -fx-background-size: stretch; -fx-background-position: center center; -fx-background-repeat: no-repeat;" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.egyptian_league_management_system.Controllers.PlayerManagementController">
     <TextField fx:id="teamNameField" layoutX="225.0" layoutY="251.0" promptText="Enter Player Name" />
+    <Label alignment="CENTER" layoutX="142.0" layoutY="14.0" prefHeight="39.0" prefWidth="315.0" text="select desired function" wrapText="true" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1">
+        <font>
+            <Font name="System Bold Italic" size="27.0" />
+        </font>
+        <textFill>
+            <LinearGradient cycleMethod="REPEAT" endX="1.0" endY="1.0">
+                <stops>
+                    <Stop>
+                        <color>
+                            <Color red="1.0" green="0.31481480598449707" blue="0.31481480598449707" />
+                        </color>
+                    </Stop>
+                    <Stop offset="0.4178082191780822">
+                        <color>
+                            <Color red="1.0" green="1.0" blue="1.0" />
+                        </color>
+                    </Stop>
+                    <Stop offset="1.0">
+                        <color>
+                            <Color red="0.39181286096572876" green="0.9473684430122375" blue="0.7714424729347229" />
+                        </color>
+                    </Stop>
+                </stops>
+            </LinearGradient>
+        </textFill>
+    </Label>
 
     <Button layoutX="7.0" layoutY="364.0" mnemonicParsing="false" onAction="#onBackClick" prefHeight="26.0" prefWidth="66.0" styleClass="button-7" text="Back" wrapText="true" />
 
@@ -38,7 +65,7 @@
             <Font size="17.0" />
         </font>
     </Label>
-    <Button alignment="CENTER" layoutX="166.0" layoutY="200.0" mnemonicParsing="false" onAction="#onSearchForPlayerClick" prefHeight="38.0" prefWidth="268.0" styleClass="button-73" text="Search for the player" textAlignment="CENTER" wrapText="true">
+    <Button alignment="CENTER" layoutX="166.0" layoutY="200.0" mnemonicParsing="false" onAction="#onSearchForPlayerClick" prefHeight="38.0" prefWidth="268.0" styleClass="button-73" text="Search for player" textAlignment="CENTER" wrapText="true">
         <font>
             <Font size="17.0" />
         </font>
