--- a/src/main/resources/com/example/egyptian_league_management_system/additionalManagement.fxml
+++ b/src/main/resources/com/example/egyptian_league_management_system/additionalManagement.fxml
@@ -5,43 +5,43 @@
 <?import javafx.scene.paint.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-image: url('epl.jpg'); -fx-background-size: stretch; -fx-background-position: center center; -fx-background-repeat: no-repeat;" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.egyptian_league_management_system.Controllers.TeamsManagementController">
-    <TextField fx:id="teamNameField" alignment="CENTER" layoutX="352.0" layoutY="252.0" prefHeight="38.0" prefWidth="209.0" promptText="enter team name " styleClass="button-73" />
+<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-image: url('epl.jpg'); -fx-background-size: stretch; -fx-background-position: center center; -fx-background-repeat: no-repeat;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.egyptian_league_management_system.Controllers.TeamsManagementController">
+    <TextField fx:id="teamNameField" alignment="CENTER" layoutX="361.0" layoutY="280.0" prefHeight="38.0" prefWidth="209.0" promptText="enter team name " styleClass="button-73" />
 
 
     <Button layoutX="7.0" layoutY="364.0" mnemonicParsing="false" onAction="#onBackClick" prefHeight="26.0" prefWidth="66.0" styleClass="button-7" text="Back" wrapText="true" />
 
-    <Button alignment="CENTER" layoutX="311.0" layoutY="196.0" mnemonicParsing="false" onAction="#onDisplayTeamMatchesClick" prefHeight="38.0" prefWidth="268.0" styleClass="button-73" text="Display team matches" textAlignment="CENTER" wrapText="true">
+    <Button alignment="CENTER" layoutX="311.0" layoutY="177.0" mnemonicParsing="false" onAction="#onDisplayTeamMatchesClick" prefHeight="38.0" prefWidth="268.0" styleClass="button-73" text=" teams orderd by (Avg) ages" textAlignment="CENTER" wrapText="true">
         <font>
             <Font size="17.0" />
         </font>
     </Button>
 
-    <Button alignment="CENTER" layoutX="21.0" layoutY="143.0" mnemonicParsing="false" onAction="#onUpdateTeamInformationClick" prefHeight="38.0" prefWidth="268.0" styleClass="button-73" text="Update team information" textAlignment="CENTER" wrapText="true">
+    <Button alignment="CENTER" layoutX="21.0" layoutY="124.0" mnemonicParsing="false" onAction="#onUpdateTeamInformationClick" prefHeight="38.0" prefWidth="268.0" styleClass="button-73" text="Top (3) G.K have Clean Sheet" textAlignment="CENTER" wrapText="true">
         <font>
             <Font size="17.0" />
         </font>
     </Button>
 
-    <Button alignment="CENTER" layoutX="311.0" layoutY="85.0" mnemonicParsing="false" onAction="#onDisplayTeamInformationClick" prefHeight="38.0" prefWidth="268.0" styleClass="button-73" text="Display team information" textAlignment="CENTER" wrapText="true">
+    <Button alignment="CENTER" layoutX="311.0" layoutY="73.0" mnemonicParsing="false" onAction="#onDisplayTeamInformationClick" prefHeight="38.0" prefWidth="268.0" styleClass="button-73" text="Top (3) who scores goals" textAlignment="CENTER" wrapText="true">
         <font>
             <Font size="17.0" />
         </font>
     </Button>
 
-    <Button alignment="CENTER" layoutX="21.0" layoutY="85.0" mnemonicParsing="false" onAction="#onAddNewTeamClick" prefHeight="38.0" prefWidth="268.0" styleClass="button-73" text="Add new team" textAlignment="CENTER" wrapText="true">
+    <Button alignment="CENTER" layoutX="21.0" layoutY="73.0" mnemonicParsing="false" onAction="#onAddNewTeamClick" prefHeight="38.0" prefWidth="268.0" styleClass="button-73" text="teams ordered by their points" textAlignment="CENTER" wrapText="true">
         <font>
             <Font size="17.0" />
         </font>
     </Button>
 
-    <Button alignment="CENTER" layoutX="311.0" layoutY="143.0" mnemonicParsing="false" onAction="#onDisplayTeamDetailedScoresClick" prefHeight="38.0" prefWidth="268.0" styleClass="button-73" text="Display team scores" textAlignment="CENTER" wrapText="true">
+    <Button alignment="CENTER" layoutX="311.0" layoutY="124.0" mnemonicParsing="false" onAction="#onDisplayTeamDetailedScoresClick" prefHeight="38.0" prefWidth="268.0" styleClass="button-73" text="top(3) players ordered by rank" textAlignment="CENTER" wrapText="true">
         <font>
             <Font size="17.0" />
         </font>
     </Button>
 
-    <Label fx:id="infoLabel" layoutX="50.0" layoutY="294.0" prefHeight="63.0" prefWidth="500.0" text="" textAlignment="CENTER">
+    <Label fx:id="infoLabel" layoutX="61.0" layoutY="318.0" prefHeight="46.0" prefWidth="500.0" text="" textAlignment="CENTER">
         <textFill>
             <LinearGradient cycleMethod="REPEAT" endX="1.0" endY="1.0">
                 <stops>
@@ -64,7 +64,7 @@
             </LinearGradient>
         </textFill>
     </Label>
-    <Button alignment="CENTER" layoutX="21.0" layoutY="196.0" mnemonicParsing="false" onAction="#onSearchForTeamIClick" prefHeight="38.0" prefWidth="268.0" styleClass="button-73" text="Search for team " textAlignment="CENTER" wrapText="true">
+    <Button alignment="CENTER" layoutX="21.0" layoutY="177.0" mnemonicParsing="false" onAction="#onSearchForTeamIClick" prefHeight="38.0" prefWidth="268.0" styleClass="button-73" text="teams ordered by goals" textAlignment="CENTER" wrapText="true">
         <font>
             <Font size="17.0" />
         </font>
@@ -97,7 +97,7 @@
         </textFill>
     </Label>
 
-    <Label alignment="CENTER" layoutX="29.0" layoutY="251.0" prefHeight="39.0" prefWidth="315.0" text="note: enter team name to use display functions" wrapText="true" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1">
+    <Label alignment="CENTER" layoutX="40.0" layoutY="280.0" prefHeight="39.0" prefWidth="315.0" text="note: enter team name to use display functions" wrapText="true" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1">
         <font>
             <Font name="System Bold Italic" size="14.0" />
         </font>
@@ -123,4 +123,9 @@
             </LinearGradient>
         </textFill>
     </Label>
+   <Button layoutX="166.0" layoutY="229.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="268.0" text="matches on a certain date">
+      <font>
+         <Font size="17.0" />
+      </font>
+   </Button>
 </AnchorPane>
