--- a/src/main/resources/com/example/egyptian_league_management_system/additionalManagement.fxml
+++ b/src/main/resources/com/example/egyptian_league_management_system/additionalManagement.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.paint.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-image: url('epl.jpg'); -fx-background-size: stretch; -fx-background-position: center center; -fx-background-repeat: no-repeat;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.egyptian_league_management_system.Controllers.TeamsManagementController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-image: url('epl.jpg'); -fx-background-size: stretch; -fx-background-position: center center; -fx-background-repeat: no-repeat;" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.egyptian_league_management_system.Controllers.TeamsManagementController">
     <TextField fx:id="teamNameField" alignment="CENTER" layoutX="361.0" layoutY="280.0" prefHeight="38.0" prefWidth="209.0" promptText="enter team name " styleClass="button-73" />
 
 
@@ -70,33 +70,6 @@
         </font>
     </Button>
 
-    <Label alignment="CENTER" layoutX="142.0" layoutY="14.0" prefHeight="39.0" prefWidth="315.0" text="select desired function" wrapText="true" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1">
-        <font>
-            <Font name="System Bold Italic" size="27.0" />
-        </font>
-        <textFill>
-            <LinearGradient cycleMethod="REPEAT" endX="1.0" endY="1.0">
-                <stops>
-                    <Stop>
-                        <color>
-                            <Color red="1.0" green="0.31481480598449707" blue="0.31481480598449707" />
-                        </color>
-                    </Stop>
-                    <Stop offset="0.4178082191780822">
-                        <color>
-                            <Color red="1.0" green="1.0" blue="1.0" />
-                        </color>
-                    </Stop>
-                    <Stop offset="1.0">
-                        <color>
-                            <Color red="0.39181286096572876" green="0.9473684430122375" blue="0.7714424729347229" />
-                        </color>
-                    </Stop>
-                </stops>
-            </LinearGradient>
-        </textFill>
-    </Label>
-
     <Label alignment="CENTER" layoutX="40.0" layoutY="280.0" prefHeight="39.0" prefWidth="315.0" text="note: enter team name to use display functions" wrapText="true" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1">
         <font>
             <Font name="System Bold Italic" size="14.0" />
@@ -128,4 +101,31 @@
          <Font size="17.0" />
       </font>
    </Button>
+
+    <Label alignment="CENTER" layoutX="142.0" layoutY="18.0" prefHeight="39.0" prefWidth="315.0" text="select desired function" wrapText="true" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1">
+        <font>
+            <Font name="System Bold Italic" size="27.0" />
+        </font>
+        <textFill>
+            <LinearGradient cycleMethod="REPEAT" endX="1.0" endY="1.0">
+                <stops>
+                    <Stop>
+                        <color>
+                            <Color red="1.0" green="0.31481480598449707" blue="0.31481480598449707" />
+                        </color>
+                    </Stop>
+                    <Stop offset="0.4178082191780822">
+                        <color>
+                            <Color red="1.0" green="1.0" blue="1.0" />
+                        </color>
+                    </Stop>
+                    <Stop offset="1.0">
+                        <color>
+                            <Color red="0.39181286096572876" green="0.9473684430122375" blue="0.7714424729347229" />
+                        </color>
+                    </Stop>
+                </stops>
+            </LinearGradient>
+        </textFill>
+    </Label>
 </AnchorPane>
